[project]
name = "langchain-output-parsers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=0.30.0",
    "huggingface-hub>=0.34.1",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.6",
    "langchain-huggingface>=0.3.1",
    "numpy>=2.3.2",
    "pydantic[email]>=2.11.7",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.47.1",
    "transformers>=4.54.0",
]
